# ExitNot--llm-eng-workbench

./: README.md
course_experiments/meeting_summary/: README.md  main.py  meet-mins.py  pyproject.toml
course_experiments/meeting_summary/meeting_summarizer/: __init__.py  base.py  factory.py
course_experiments/meeting_summary/meeting_summarizer/config/: __init__.py  loader.py  presets.py
course_experiments/meeting_summary/meeting_summarizer/summarizers/: __init__.py  pipeline.py  quantized.py
course_experiments/meeting_summary/notebooks/: meeting-minutes.ipynb
course_experiments/notebooks/: .env.example  coding-generation.ipynb  pyproject.toml
google-adk-exp/task-agent/: .env.example  README.md  pyproject.toml
google-adk-exp/task-agent/hera/: __init__.py  agent.py  task_manager.py
google-adk-exp/task-agent/notebooks/: task-agent-experiment.ipynb
