[project]
name = "task-agent"
version = "0.1.0"
description = "Google ADK agent for task management with day/week/month/year timeframes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk",
    "python-dateutil>=2.8.0",
]

[dependency-groups]
jupyter = [
    "jupyter",
    "ipykernel",
]
